--- a/elm.tex
+++ b/elm.tex
@@ -137,7 +137,9 @@ performance da ELM com diferentes estratégias.
 Também é importante lembrar que, na presença de uma matriz $H_{(0)}$ mal-condicionada,
 OS-ELM não converge para ELM.
 
-\ano{PRESS cru é útil pra se ter o erro estatistico (de regressão?)  em vez do quadrado do resíduo}
+\ano{PRESS: erro estatistico (de regressão?)}
+
+\ano{quadrado do resíduo: erro I e CI?}
 
 \section{ I??? }
 
