--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -3,7 +3,10 @@
 
 \esb{provavelmente o classificador atrapalha quando ele
 não tem uma estimativa de distribuição de probabilidade suave;
-isso afeta a medida de incerteza}
+isso afeta a medida de incerteza;
+ao menos NB e 5NN devem ter esse problema;
+posso calcular a entropia média da saída de cada classif para cada base em todos os exemplos
+e fazer uma tabela com a ultima linha sendo a media de todas as bases}
 
 \ano{dizer em algum lugar que demonstra a Viabilidade do Aprendizado Ativo}
 
