--- a/introducao.tex
+++ b/introducao.tex
@@ -1,11 +1,20 @@
 \chapter{Introdução} \label{cap:intro}
-\esb{azul: esboço de texto} \ano{vermelho: anotação} \tar{verde: tarefa}
+ \tar{remover citações de baixa qualidade no documento todo}
+
+ \tar{escrever sobre implementação (apendice?):
+ URL, diagrama de classes, LOC, custos totais CPU/memória/disco, total de
+registros no BD}
 
 \esb{Andre+Davi: apresenta o custo de rotulação como motivação;
 explicita que ninguém compara estratégias; comenta possiveis deficiencias ou
 lacunas das estrategias existentes, apresenta melhorias propostas; apresenta
 recomendação de classificador e/ou estratégia; apresenta hipóteses principal e secundárias.
 Falar ainda dos objetivos da tese, que estao bem ligados as hipoteses}
+
+\ano{
+ a quantidade global desses dados duplica a cada dois anos \citep{zliobaite2012next} e, por isso,
+requer sistemas cada vez mais eficientes e que exijam intervenção humana mínima.
+}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -74,6 +83,7 @@ envolvidas neste trabalho são apresentadas no Capítulo \ref{contexto}.
 No Capítulo \ref{propostas},
 são apresentadas as propostas de adaptação de algoritmos
 e é explicada a organização por etapas dos demais capítulos de propostas.
+\ano{rever}
 Essas etapas são uma sequência de pares proposta-experimento
 expostos nos capítulos \ref{analise}, \ref{ealm} e \ref{aml}
 com o intuito de manter a unidade de cada assunto.
