--- a/resumo.tex
+++ b/resumo.tex
@@ -1,4 +1,11 @@
 \chapter*{Resumo}
+\tar{possível novo título:}
+
+\tar{Viabilidade do aprendizado de máquina ativo em vista da diversidade de
+estratégias}
+
+\tar{checar usos de rótulo e classe}
+
 Apesar do crescente avanço no desenvolvimento de algoritmos capazes de induzir modelos preditivos
 numa grande diversidade de domínios, entraves de cunho econômico, dentre outros, ainda persistem.
 Embora tais modelos sejam construídos sem programação explícita,
@@ -19,12 +26,15 @@ para o domínio em questão, mesmo com poucos rótulos conhecidos de antemão;
 ou, em maior detalhe,
 para cada instante durante a aquisição de rótulos naquele domínio.
 
-Nesta tese, a viabilidade do aprendizado ativo é comprovada empiricamente com solidez estatística 
-de acordo com três pontos de vista: adaptação e comparação dos principais paradigmas e de sua efetividade em geral;
+Nesta tese, a viabilidade do aprendizado ativo é comprovada empiricamente com
+solidez estatística 
+de acordo com três pontos de vista: adaptação e comparação dos principais
+paradigmas e de sua efetividade em geral;
 na definição de nichos adequados para cada estratégia;
-e, na demonstração de que é possível definir previamente as estratégias mais adequadas,
-especialmente se for adotado uma chaveamento ao longo do processo de rotulação.
-É também empreendida uma análise amplamente negligenciada pela literatura da área:
+e, na demonstração de que é possível definir previamente as estratégias mais
+adequadas automaticamente. \ano{conferir}
+É também empreendida uma análise amplamente negligenciada pela
+literatura da área:
 o risco devido à variabilidade dos algoritmos.
 
 % o viés de amostragem tem seus perigos, então quando não há diferença estatística entre aleatório e AA, deve-se prefirir aleatório,
